# bulwark

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  install-polkit.sh  package.json  settings-check.yml
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-crates.yml  publish-flatpak.yml  publish-ppa.yml  publish-snap.yml  release.yml  test-ppa.yml
apps/bulwark-app/: .prettierignore  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/bulwark-app/src-tauri/: .taurignore  Cargo.toml  build.rs  bulwark.desktop  tauri.conf.json
apps/bulwark-app/src-tauri/binaries/: .gitignore
apps/bulwark-app/src-tauri/capabilities/: default.json
apps/bulwark-app/src-tauri/icons/: icon.icns
apps/bulwark-app/src-tauri/src/: ai_security.rs  lib.rs  main.rs  monitoring.rs  realtime_av.rs  remediation.rs  reveal.rs  ssh_protect.rs  tray.rs
crates/bulwark-agent/: Cargo.toml  README.md
crates/bulwark-agent/src/: lib.rs
crates/bulwark-cli/: Cargo.toml
crates/bulwark-cli/src/: main.rs
crates/bulwark-cli/tests/: e2e.rs
crates/bulwark-core/: Cargo.toml  README.md
crates/bulwark-core/migrations/2026-07-12-000000_init/: down.sql  up.sql
crates/bulwark-core/migrations/2026-07-13-000000_rule_suppressions/: down.sql  up.sql
crates/bulwark-core/migrations/2026-07-19-000000_scan_rules_evaluated/: down.sql  up.sql
crates/bulwark-core/src/: av_scan.rs  condition.rs  engine.rs  lib.rs  models.rs  sandbox.rs  schema.rs  store.rs
crates/bulwark-core/src/ai_scan/: detectors.rs  discovery.rs  mod.rs  redact.rs  secret_rules.toml  secrets.rs
crates/bulwark-core/src/collectors/: authorized_keys.rs  banners.rs  clamav.rs  cron.rs  file_integrity.rs  file_permissions.rs  grub.rs  logging.rs  login_defs.rs  mac.rs  macos_launchd.rs  mod.rs  module_blacklist.rs  network_interfaces.rs  ports.rs  process_accounting.rs  shell_history.rs  ssh_keys.rs  sshd.rs  sudoers.rs  sysctl.rs  systemd.rs  windows_persistence.rs
crates/bulwark-core/src/compliance/: mod.rs
crates/bulwark-core/src/compliance/standards/: hipaa-security-rule.yaml  iso-27001-2022.yaml  pci-dss-4.0.yaml
crates/bulwark-core/src/logs/: correlate.rs  decoder.rs  event.rs  mod.rs  rule.rs  source.rs
crates/bulwark-core/src/remediation/: banner.rs  login_defs.rs  mod.rs  permissions.rs  sshd.rs  sysctl.rs
crates/bulwark-core/tests/: ai_scan_matrix.rs  config_rule_matrix.rs  log_scanner_matrix.rs  remediation_e2e.rs
crates/bulwark-core/tests/data/: gitleaks_false_positives.toml
crates/bulwark-proto/: Cargo.toml  README.md
crates/bulwark-proto/src/: lib.rs
crates/bulwarkctl/: Cargo.toml  README.md
crates/bulwarkctl/src/: main.rs  remote.rs
crates/bulwarkctl/tests/: ai_cli.rs  e2e.rs  fix_cli.rs  package.rs  remote_ssh.rs  rules_dir_guard.rs
crates/bulwarkctl/tests/fixtures/: remote_scanrun.json
decoders/: pam.yaml  sshd.yaml  su.yaml  sudo.yaml
design-docs/001-bulwark-security-scanner/: index.md
docs/: collaborate.md  download.md  index.md  package-lock.json  package.json  vercel.json
docs/.vitepress/: config.mts
docs/articles/: ai-coding-assistant-security.md  ai-context-threats.md  auditd-rules-cheat-sheet.md  bulwark-vs-wazuh.md  choosing-a-linux-security-scanner.md  cis-mitre-mapping.md  does-linux-need-antivirus.md  fail2ban-vs-crowdsec-vs-denyhosts.md  is-my-linux-server-hacked.md  linux-antivirus-ubuntu-fedora.md  linux-persistence-techniques.md  rkhunter-chkrootkit-false-positives.md  ssh-hardening-checklist.md  sudoers-hardening-checklist.md  sysctl-kernel-hardening.md  systemd-service-sandboxing.md
docs/guide/: agent-security.md  ai-security.md  architecture.md  contributing.md  remediation.md
docs/public/: llms.txt  robots.txt
docs/research/: lynis-benchmark.md
docs/scripts/: check-mermaid.mjs  generate-og.mjs
log-rules/accounts-services/: BLWK-LOG-PAM-001.yaml  BLWK-LOG-SU-001.yaml
log-rules/privilege-escalation/: BLWK-LOG-SUDO-001.yaml  BLWK-LOG-SUDO-002.yaml  BLWK-LOG-SUDO-003.yaml
log-rules/ssh-remote-access/: BLWK-LOG-SSH-001.yaml  BLWK-LOG-SSH-002.yaml  BLWK-LOG-SSH-003.yaml
packaging/: README.md  snap-classic-request.md
packaging/aur/: .SRCINFO  PKGBUILD
packaging/copr/: bulwarkctl.spec
packaging/flatpak/: com.vietanhdev.bulwark.desktop  com.vietanhdev.bulwark.metainfo.xml  com.vietanhdev.bulwark.yaml  flathub-permissions-rationale.md  flathub-pr-checklist.md  flathub-pr-template.md  flathub-submission-facts.md
polkit/: com.bulwark.policy
research/2026-07-11-linux-security-checklist/: report.md
research/2026-07-12-article-topic-ideas/: report.md
research/2026-07-12-bulwark-vs-lynis-benchmark/: report.md
rules/accounts-services/: BLWK-ACCT-001.yaml  BLWK-ACCT-002.yaml  BLWK-ACCT-003.yaml  BLWK-ACCT-004.yaml  BLWK-ACCT-005.yaml
rules/defense-evasion/: BLWK-EVASION-001.yaml
rules/file-integrity/: BLWK-FIM-001.yaml  BLWK-FIM-002.yaml  BLWK-FIM-003.yaml  BLWK-FIM-004.yaml  BLWK-FIM-005.yaml  BLWK-FIM-006.yaml  BLWK-FIM-007.yaml  BLWK-FIM-008.yaml
rules/filesystem-permissions/: BLWK-FS-001.yaml  BLWK-FS-002.yaml
rules/kernel-hardening/: BLWK-KERNEL-001.yaml  BLWK-KERNEL-002.yaml  BLWK-KERNEL-003.yaml  BLWK-KERNEL-004.yaml  BLWK-KERNEL-005.yaml  BLWK-KERNEL-006.yaml  BLWK-KERNEL-007.yaml  BLWK-KERNEL-008.yaml  BLWK-KERNEL-009.yaml  BLWK-KERNEL-010.yaml  BLWK-KERNEL-011.yaml  BLWK-KERNEL-012.yaml  BLWK-KERNEL-013.yaml  BLWK-KERNEL-014.yaml  BLWK-KERNEL-015.yaml  BLWK-KERNEL-016.yaml  BLWK-KERNEL-017.yaml  BLWK-KERNEL-018.yaml  BLWK-KERNEL-019.yaml  BLWK-KERNEL-020.yaml  BLWK-KERNEL-021.yaml
rules/logging-auditing/: BLWK-BANN-001.yaml  BLWK-LOG-001.yaml  (+2 more)
scripts/: build-ppa-source.sh  bump-version.sh  check-packaging-consistency.sh  extract-gitleaks-fixtures.py  flatpak-build-local.sh  flatpak-gen-flathub-manifest.sh  flatpak-gen-sources.sh  gitleaks-fixtures-header.txt  publish-copr.sh  refresh-aur-checksum.sh  test-gui-packages-docker.sh
snap/: snapcraft.yaml
(+100 files in other folders)
