[workspace]
resolver = "2"
members = [
    "crates/bulwark-core",
    "crates/bulwarkctl",
    "crates/bulwark-agent",
    "crates/bulwark-proto",
    "apps/bulwark-app/src-tauri",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Viet Anh Nguyen"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/vietanhdev/bulwark"
homepage = "https://bulwark.nrl.ai"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
libc = "0.2"
