[workspace]
resolver = "2"
members = [
    "crates/bulwark-core",
    "crates/bulwarkctl",
    "crates/bulwark-agent",
    "crates/bulwark-proto",
    "apps/bulwark-app/src-tauri",
]

[workspace.package]
version = "0.6.1"
edition = "2021"
authors = ["Viet Anh Nguyen"]
license = "Apache-2.0"
repository = "https://github.com/vietanhdev/bulwark"
homepage = "https://bulwark.nrl.ai"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
# Bundled SQLite so a build never depends on the host having libsqlite3-dev, and every platform
# gets the same engine version. Diesel pulls this crate in transitively; naming it here is what
# lets us turn `bundled` on.
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
aho-corasick = "1"
rayon = "1"
toml = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
libc = "0.2"
