[package]
name = "bulwark-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Background monitoring daemon for Bulwark (placeholder — implementation in progress, see bulwark-core)"
readme = "README.md"
keywords = ["security", "linux", "monitoring", "daemon", "hardening"]
categories = ["os::linux-apis", "development-tools"]
