[package]
name = "bulwark-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Collectors, rule engine, and finding model shared by bulwarkctl and bulwark-app"
readme = "README.md"
keywords = ["security", "linux", "hardening", "audit", "scanner"]
categories = ["os::linux-apis", "config", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
walkdir.workspace = true
libc.workspace = true
rusqlite_migration = "1"

[dev-dependencies]
tempfile = "3"
