[package]
name = "bulwark-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Collectors, rule engine, and finding model shared by bulwarkctl and bulwark-app"
readme = "README.md"
keywords = ["security", "linux", "hardening", "audit", "scanner"]
categories = ["os::linux-apis", "config", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
libsqlite3-sys.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
toml.workspace = true
aho-corasick.workspace = true
walkdir.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile = "3"
