[package]
name = "bulwark-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Collectors, rule engine, and finding model shared by bulwarkctl and bulwark-app"
readme = "README.md"
keywords = ["security", "linux", "hardening", "audit", "scanner"]
categories = ["os::linux-apis", "config", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
libsqlite3-sys.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
toml.workspace = true
aho-corasick.workspace = true
rayon.workspace = true
walkdir.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile = "3"
# Generates a random string that matches a given regex — the same trick gitleaks uses (`reggen`) to
# build a true positive for every rule from the rule's own pattern, so the test corpus stays in sync
# with the rule pack and no secret-shaped literal is ever committed. Test-only, never shipped.
rand = "0.10"
rand_regex = "0.19"
regex-syntax = "0.8.11"
