[package]
name = "bulwark-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared wire types between bulwark-agent and its clients (placeholder — implementation in progress, see bulwark-core)"
readme = "README.md"
keywords = ["security", "linux", "protocol", "ipc", "hardening"]
categories = ["os::linux-apis", "data-structures"]
