[package]
name = "bulwarkctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bulwark CLI - scan a Linux host from a terminal or over SSH, no display session required"
readme = "README.md"
keywords = ["security", "linux", "hardening", "audit", "cli"]
categories = ["command-line-utilities", "os::linux-apis", "config"]

[[bin]]
name = "bulwarkctl"
path = "src/main.rs"

[dependencies]
bulwark-core = { path = "../bulwark-core", version = "0.2.1" }
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true

# `cargo install cargo-deb` then `cargo deb -p bulwarkctl` from the workspace root.
[package.metadata.deb]
maintainer = "Viet Anh Nguyen"
copyright = "2026, Viet Anh Nguyen"
license-file = ["../../LICENSE", "0"]
extended-description = "Scans a Linux host for security misconfigurations and intrusion indicators using a native Rust rule engine over declarative YAML rules, and explains findings in plain language with a suggested fix. CLI front-door — see bulwark-app for the GUI."
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["target/release/bulwarkctl", "usr/bin/", "755"],
    ["../../rules/**/*.yaml", "usr/share/bulwark/rules/", "644"],
    ["../../decoders/**/*.yaml", "usr/share/bulwark/decoders/", "644"],
    ["../../log-rules/**/*.yaml", "usr/share/bulwark/log-rules/", "644"],
]

# `cargo install cargo-generate-rpm` then `cargo generate-rpm -p crates/bulwarkctl` after a release build.
# The rule pack is not optional dressing — `resolve_rules_dir` falls back to
# `/usr/share/bulwark/rules` on an installed system, so an RPM carrying only the binary installs
# a CLI that fails on every invocation with "couldn't find a 'rules' directory". The `.deb`
# above always shipped them; the RPM's asset list had simply drifted out of sync with it.
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/bulwarkctl", dest = "/usr/bin/bulwarkctl", mode = "755" },
    { source = "rules/*/*.yaml", dest = "/usr/share/bulwark/rules/", mode = "644" },
    { source = "decoders/*.yaml", dest = "/usr/share/bulwark/decoders/", mode = "644" },
    { source = "log-rules/*/*.yaml", dest = "/usr/share/bulwark/log-rules/", mode = "644" },
]
